some initial CSS

--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <title>Quiz Time</title>
   </head>
   <body>
-    <header>
+    <header class="head">
         <h1>Coding Quiz</h1>
     </header>
     <aside class ="timer">Timer</aside>
+    <main class = "main">
+        <p>P</p>
+        <section class = "question">Question</section>
+        <section class = "answers">Answers</section>
 
-
+    </main>
 
   </body>
+  <footer>Page number</footer>
 </html>
