--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
     <header class="head">
         <h1>Coding Quiz</h1>
+        <aside class ="timer">Timer</aside>
     </header>
-    <aside class ="timer">Timer</aside>
+    
     <main class = "main">
         <p>P</p>
         <section class = "question">Question</section>
@@ -20,5 +21,5 @@
     </main>
 
   </body>
-  <footer>Page number</footer>
+  <footer>Page </footer>
 </html>
