--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <main class = "main">
         <p>P</p>
         <section class = "question">Question</section>
-        <section class = "answers">Answers</section>
+        <div>1</div>
+            
+        <section class = "answers">Answers</section>  
+        <div>2</div>
 
     </main>
 
