fixed my html issues and began dynamically creating stuff

--- a/index.html
+++ b/index.html
@@ -9,20 +9,31 @@
   </head>
   <body>
     <header class="head">
+        <div>
         <h1>Coding Quiz</h1>
+        </div>
+        <div>
         <aside class ="timer">Timer</aside>
+        </div>
+
     </header>
     
     <main class = "main">
+        <div>
         <p>P</p>
-        <section class = "question">Question</section>
-        <div>1</div>
-            
-        <section class = "answers">Answers</section>  
-        <div>2</div>
+        </div>
+
+        <section class = "question">
+        <div>Question</div>
+          <ul id="questionBox"> </ul>
+        </section>
+        <section id="answerBox">  
+          <ul class = "answers">Answers</ul>
+       </section>
 
     </main>
 
   </body>
   <footer>Page </footer>
+<script src="scripts.js"defer></script>
 </html>
