css fixes and dynamically generating JS elements

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     
     <main class = "main">
         <div>
-        <p>P</p>
         </div>
 
         <section class = "question">
         <div>Question</div>
-          <ul id="questionBox"> </ul>
+          <ul id="questionBox"></ul>
         </section>
-        <section id="answerBox">  
-          <ul class = "answers">Answers</ul>
+        <section class = "answers">
+        <div>Answers</div>  
+          <ul id="answerBox"></ul>
        </section>
 
     </main>
