added start button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     
     <main class = "main">
         <div>
+          <button id="button">Start Button</button>
         </div>
 
         <section class = "question">
