--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <main class = "main">
         <div>
-          <button id="button">Start Button</button>
+          <button id="startbutton">Start Button</button>
         </div>
 
         <section class = "question">
