got user score working

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     </header>
     
-    <main class = "main">
+    <main id="main" class = "main">
         <div>
           <button id="startbutton">Start Button</button>
         </div>
