skeleton done, needs timer, storage and styling

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     </main>
 
   </body>
-  <footer>Page </footer>
+  <footer>💗 Peace and Love by Bdalberson💗 </footer>
 <script src="scripts.js"defer></script>
 </html>
