timer appearing and functioning

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div>
         <h1>Coding Quiz</h1>
         </div>
-        <div>
-        <aside class ="timer">Timer</aside>
+        <div class="time"id="timer"></div>
+        <aside class ="time">Timer : </aside>
         </div>
 
     </header>
