Fixes for mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Coding Quiz</h1>
         </div>
         <div class="time"id="timer"></div>
-        <aside class ="time">Timer : </aside>
+        <aside class ="time">Timer </aside>
         </div>
 
     </header>
