--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Quiz Time</title>
   </head>
   <body>
-    <header class="head">
+    <header class="head">  
         <div>
         <h1>Coding Quiz</h1>
         </div>
@@ -20,14 +20,13 @@
     
     <main id="main" class = "main">
         <div>
-          <button id="startbutton">Start Button</button>
+          <button id="startbutton">Start Button</button>   <!-- start button that begins game and timer -->
         </div>
-
-        <section class = "question">
+        <section class = "question"> <!-- used to dynamically serve up questions -->
         <div>Question</div>
           <ul id="questionBox"></ul>
         </section>
-        <section class = "answers">
+        <section class = "answers"><!-- used to dynamically serve up answers -->
         <div>Answers</div>  
           <ul id="answerBox"></ul>
        </section>
