--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="head">  
         <div>
-        <h1>Coding Quiz</h1>
+        <h1 id ="headname">Coding Quiz</h1>
         </div>
         <div class="time"id="timer"></div>
         <aside class ="time">Timer </aside>
